# waveshaper

./: .gitignore  CMakeLists.txt  README.txt
include/: App.hpp  MainFrame.hpp
src/: App.cpp  MainFrame.cpp
